--- a/include/text_strings.h.in
+++ b/include/text_strings.h.in
@@ -130,16 +130,16 @@
  * File Select Text
  */
 // Main Screens
-#define TEXT_MARIO _("MARIO") // View Score Menu
+#define TEXT_MARIO _("GAME") // View Score Menu
 #define TEXT_SELECT_FILE _("SELECT FILE")
 #define TEXT_CHECK_FILE _("CHECK FILE")
 #define TEXT_COPY_FILE _("COPY FILE")
 #define TEXT_ERASE_FILE _("ERASE FILE")
 #define TEXT_SOUND_SELECT _("SOUND SELECT")
-#define TEXT_FILE_MARIO_A _("MARIO A")
-#define TEXT_FILE_MARIO_B _("MARIO B")
-#define TEXT_FILE_MARIO_C _("MARIO C")
-#define TEXT_FILE_MARIO_D _("MARIO D")
+#define TEXT_FILE_MARIO_A _("GAME A")
+#define TEXT_FILE_MARIO_B _("GAME B")
+#define TEXT_FILE_MARIO_C _("GAME C")
+#define TEXT_FILE_MARIO_D _("GAME D")
 
 // Menu Options
 #define TEXT_SCORE _("SCORE")
@@ -212,15 +212,15 @@
 /**
  * Ending Peach cutscene text.
  */
-#define TEXT_FILE_MARIO_EXCLAMATION _("Mario!")
+#define TEXT_FILE_MARIO_EXCLAMATION _("Mario, Luigi!")
 #define TEXT_POWER_STARS_RESTORED __("The power of the Stars is restored to the castle...")
 #define TEXT_THANKS_TO_YOU __("...and it's all thanks to you!")
-#define TEXT_THANK_YOU_MARIO __("Thank you, Mario!")
+#define TEXT_THANK_YOU_MARIO __("Thank you both!")
 #define TEXT_SOMETHING_SPECIAL __("We have to do something special for you...")
 #define TEXT_LISTEN_EVERYBODY _("Listen, everybody,")
 #define TEXT_LETS_HAVE_CAKE _("let's bake a delicious cake...")
-#define TEXT_FOR_MARIO _("...for Mario...")
-#define TEXT_FILE_MARIO_QUESTION _("Mario!")
+#define TEXT_FOR_MARIO _("...for both of you...")
+#define TEXT_FILE_MARIO_QUESTION _("Mario, Luigi!")
 
 #endif
 
